2003-12-04  H.J. Lu  <hongjiu.lu@intel.com>

	* bfdlink.h (bfd_link_info): Change relax_finalizing to
	need_relax_finalize.

2003-12-03  Alan Modra  <amodra@bigpond.net.au>

	* bfdlink.h (struct bfd_link_hash_entry): Rename "next" to "und_next".

2003-12-02  Alan Modra  <amodra@bigpond.net.au>

	* bfdlink.h (struct bfd_link_info): Remove mpc860c0 field.

2003-11-18  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* opcode/mips.h: Define new enum members, M_LCA_AB and M_DLCA_AB.

2003-11-14  Nick Clifton  <nickc@redhat.com>

	* dis-asm.h (struct disassemble_info): Add new field
	'symbol_is_valid' which is a function which can tell the
	disassembler to skip certain symbols as they should not be
	displayed to the user.
	(arm_symbol_is_valid): New prototype.  This is the ARM
	specific function for the symbol_is_valid field.
	(generic_symbol_is_valid): New prototype.  This is the default
	function pointed to by the symbol_is_valid field.

2003-11-06  Bruno Rohee  <bruno@rohee.com>

	* hp-symtab.h: Fix "the the" typo.

2003-10-24  H.J. Lu  <hongjiu.lu@intel.com>

	* bfdlink.h (bfd_elf_version_expr): Add "symbol" and remove
	"wildcard".

2003-10-22  Joseph S. Myers  <jsm@polyomino.org.uk>

	* obstack.h: Merge the following change from gnulib:
	2003-10-21  Paul Eggert  <eggert@twinsun.com>
	* obstack.h (obstack_1grow_fast): Properly parenthesize arg.
	(obstack_ptr_grow_fast, obstack_int_grow_fast):
	Don't use lvalue casts, as GCC plans to remove support for them
	in GCC 3.5.  Reported by Joseph S. Myers.  This bug
	was also present in the non-GCC version, indicating that this
	code had always been buggy and had never been widely used.
	(obstack_1grow, obstack_ptr_grow, obstack_int_grow, obstack_blank):
	Use the fast variant of each macro, rather than copying the
	definiens of the fast variant; that way, we'll be more likely to
	catch future bugs in the fast variants.

2003-10-22  Jakub Jelinek  <jakub@redhat.com>

	* bfdlink.h (struct bfd_elf_version_expr): Remove match field.